# tp_py_grpc_sync

./: .pmfp_template.json  CHANGELOG.md  MANIFEST.in  README.md  docker-compose.yml  dockerfile  pmfprc.json  requirements.txt  setup.cfg
pbschema/: echo.proto
tp_py_grpc_sync/: __main__.py
tp_py_grpc_sync/echo_pb/: __init__.py  echo_pb2.py  echo_pb2_grpc.py
tp_py_grpc_sync/sdk/: __init__.py  __main__.py  sdk.py
tp_py_grpc_sync/sdk/interceptor/: timer.py
tp_py_grpc_sync/serv/: __init__.py  __main__.py  handdler.py  serv.py
tp_py_grpc_sync/serv/interceptor/: timer.py
