[metadata]
name = tp_py_grpc_sync
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	    License :: OSI Approved :: MIT License
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	    pyproxypattern >= 0.0.1
	    grpcio >= 1.38.0
	    protobuf >= 3.17.3
	    grpcio-health-checking >= 1.38.0
	    grpcio-reflection >= 1.38.0
	    grpcio-admin >= 1.38.0
	    schema_entry >= 0.1.5
	    grpcio-tools >= 1.38.0
	    pyloggerhelper >= 0.0.3
tests_require = 
	    coverage >= 5.5
	    mypy >= 0.800
	    autopep8 >= 1.5.6
	    pylint >= 2.8.0
	    pydocstyle>=6.0.0
setup_requires = 
	    wheel >= 0.36.2
	    setuptools >= 47.1.0
	    

[options.packages.find]
include = tp_py_grpc_sync
exclude = tests

